k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deployment
  namespace: petclinic
  labels:
    app: petclinic
spec:
  replicas: 3

  selector:
    matchLabels:
      app: petclinic

  template:
    metadata:
      labels:
        app: petclinic

    spec:
      containers:
      - name: petclinic-container
        image: rahamshaik/petclinic:latest
        imagePullPolicy: Always

        ports:
        - containerPort: 8080

        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"

          limits:
            memory: "1Gi"
            cpu: "500m"

        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 20
