k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  namespace: petclinic
spec:
  selector:
    app: petclinic

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: NodePort
