k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: petclinic
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx

  rules:
  - host: petclinic.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: petclinic-service
            port:
              number: 80
